[package]
name = "passmenu"
version = "0.1.0"
authors = ["Daniel Sockwell <daniel@codesections.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
run_script = "0.3.2"
itertools = "0.8.2"
copypasta = "0.6.2"
